{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "548d06ea-0550-50aa-8512-bbce2a03945e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:subnet/subnet-b923bbc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-b923bbc3",
            "map_public_ip_on_launch": true,
            "owner_id": "270074865685",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/donnie-test": "shared",
              "kubernetes.io/cluster/wes-eks": "shared",
              "kubernetes.io/cluster/wes-eks-2": "shared",
              "kubernetes.io/cluster/wes-eks-4": "shared"
            },
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:vpc/vpc-fbd9e393",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-cb4d4aa3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-77657a1f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fbd9e393",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-baa567d1",
            "owner_id": "270074865685",
            "state": "available",
            "tags": {
              "Name": "default-VPC",
              "kubernetes.io/cluster/wes-eks": "shared",
              "kubernetes.io/cluster/wes-eks-4": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rke2-server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194ceffda12a2155",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-0caeba13346f0e2d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caeba13346f0e2d9",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01df79a50d1105f7e",
            "private_dns": "ip-172-31-11-116.us-east-2.compute.internal",
            "private_ip": "172.31.11.116",
            "public_dns": "ec2-3-138-121-226.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.121.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09400e61ff889823b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrke-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-42bf9d2a",
            "tags": {
              "Leader": "true",
              "Name": "hgrke-server-0",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebb74e1209b5125c"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194ceffda12a2155",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-0727fffa20c85278b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0727fffa20c85278b",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01eea3c0116b4b300",
            "private_dns": "ip-172-31-9-192.us-east-2.compute.internal",
            "private_ip": "172.31.9.192",
            "public_dns": "ec2-18-223-203-98.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.203.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f7be468ed9886a98",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrke-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-42bf9d2a",
            "tags": {
              "Leader": "false",
              "Name": "hgrke-server-1",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebb74e1209b5125c"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194ceffda12a2155",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-005d2facaea47e56c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005d2facaea47e56c",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cc1c15427add923",
            "private_dns": "ip-172-31-13-49.us-east-2.compute.internal",
            "private_ip": "172.31.13.49",
            "public_dns": "ec2-18-220-26-9.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.26.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-001ea795ca5541b54",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrke-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-42bf9d2a",
            "tags": {
              "Leader": "false",
              "Name": "hgrke-server-2",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebb74e1209b5125c"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rke2-master-nlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke-nlb/9c56103d1bcb2e99",
            "arn_suffix": "net/hgrke-nlb/9c56103d1bcb2e99",
            "dns_name": "hgrke-nlb-9c56103d1bcb2e99.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke-nlb/9c56103d1bcb2e99",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hgrke-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-42bf9d2a"
              },
              {
                "subnet_id": "subnet-b923bbc3"
              },
              {
                "subnet_id": "subnet-fa02c1b6"
              }
            ],
            "subnets": [
              "subnet-42bf9d2a",
              "subnet-b923bbc3",
              "subnet-fa02c1b6"
            ],
            "vpc_id": "vpc-fbd9e393",
            "zone_id": "ZLMOA37VPKANP"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rke2-master-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke-nlb/9c56103d1bcb2e99/8f6432cc6ee0c8c8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke-nlb/9c56103d1bcb2e99/8f6432cc6ee0c8c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke-nlb/9c56103d1bcb2e99",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rke2-master-supervisor-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke-nlb/9c56103d1bcb2e99/ab1b4400a4dcf337",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke-nlb/9c56103d1bcb2e99/ab1b4400a4dcf337",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke-nlb/9c56103d1bcb2e99",
            "port": 9345,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rke2-master-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f",
            "arn_suffix": "targetgroup/hgrke-nlb-tg/bb512271c666614f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f",
            "lambda_multi_value_headers_enabled": false,
            "name": "hgrke-nlb-tg",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rke2-master-supervisor-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
            "arn_suffix": "targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "port": "9345",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
            "lambda_multi_value_headers_enabled": false,
            "name": "hgrke-nlb-supervisor-tg",
            "port": 9345,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rke2-nlb-attachement",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f-20201103210841499600000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f",
            "target_id": "i-0caeba13346f0e2d9"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f-20201103210841574700000004",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f",
            "target_id": "i-0727fffa20c85278b"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f-20201103210841939600000007",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-tg/bb512271c666614f",
            "target_id": "i-005d2facaea47e56c"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rke2-nlb-supervisor-attachement",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e-20201103210841600800000005",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
            "target_id": "i-0caeba13346f0e2d9"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e-20201103210841920800000006",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
            "target_id": "i-0727fffa20c85278b"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e-20201103210841969500000008",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke-nlb-supervisor-tg/30b374bb0ad1a22e",
            "target_id": "i-005d2facaea47e56c"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rke2-all-open",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:security-group/sg-0ebb74e1209b5125c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebb74e1209b5125c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hgrke-sg",
            "name_prefix": "",
            "owner_id": "270074865685",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    }
  ]
}